unpackaged/main/default/objects/Lead/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <label>Account Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>