unpackaged/main/default/objects/Lead/fields/Account_MK_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_MK_Fit_Score__c</fullName>
    <formula>Recommended_Account_LKP__r.MK_Customer_Fit_Score__c</formula>
    <inlineHelpText>MK Customer Fit Score from Account</inlineHelpText>
    <label>Account MK Fit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>