unpackaged/main/default/objects/Lead/fields/Account_MK_Fit_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_MK_Fit_Segment__c</fullName>
    <formula>Recommended_Account_LKP__r.MK_Customer_Fit_Segment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account MK Fit Segment</label>
    <type>Text</type>
</CustomField>