unpackaged/main/default/objects/Lead/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>For use to map Account Name to HS</description>
    <formula>Company</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>