unpackaged/main/default/objects/Lead/fields/AccountMatchMethod__c.field-meta.xml
<CustomField>
    <fullName>AccountMatchMethod__c</fullName>
    <description>Method that account was matched to account</description>
    <label>Account Match Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DUNS Matched</fullName>
            </value>
            <value>
                <fullName>DUNS Ultimate Matched</fullName>
            </value>
            <value>
                <fullName>DUNS Parent Matched</fullName>
            </value>
            <value>
                <fullName>Partner ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>