unpackaged/main/default/objects/Lead/fields/Automation_Routing__c.field-meta.xml
<CustomField>
    <fullName>Automation_Routing__c</fullName>
    <label>Automation Routing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>