unpackaged/main/default/objects/Lead/fields/BBS_Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>BBS_Last_Order_Date__c</fullName>
    <inlineHelpText>Big Blue Saw Last Order Date</inlineHelpText>
    <label>BBS Last Order Date</label>
    <type>Date</type>
</CustomField>