unpackaged/main/default/objects/Lead/fields/BBS_Lifetime_Spend__c.field-meta.xml
<CustomField>
    <fullName>BBS_Lifetime_Spend__c</fullName>
    <inlineHelpText>Big Blue Saw Lifetime Spend</inlineHelpText>
    <label>BBS Lifetime Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>