unpackaged/main/default/objects/Lead/fields/CAS_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>CAS_Lead_Owner__c</fullName>
    <formula>Owner:User.FirstName &amp; " " &amp;Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAS Lead Owner</label>
    <type>Text</type>
</CustomField>