unpackaged/main/default/objects/Lead/fields/CAS_Title__c.field-meta.xml
<CustomField>
    <fullName>CAS_Title__c</fullName>
    <formula>IF(ISBLANK(Title),"N/A",Title)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAS Title</label>
    <type>Text</type>
</CustomField>