unpackaged/main/default/objects/Lead/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>The Contact's City</inlineHelpText>
    <label>Contact City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>