unpackaged/main/default/objects/Lead/fields/Clearbit_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Time_Zone__c</fullName>
    <label>Clearbit Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>