unpackaged/main/default/objects/Lead/fields/Contact_Form_Last_Submission__c.field-meta.xml
<CustomField>
    <fullName>Contact_Form_Last_Submission__c</fullName>
    <label>Contact Form Last Submission</label>
    <type>DateTime</type>
</CustomField>