unpackaged/main/default/objects/Lead/fields/Contact_Form_Submission_Links__c.field-meta.xml
<CustomField>
    <fullName>Contact_Form_Submission_Links__c</fullName>
    <description>6/29/2023 - Proof of Concept for new Contact Form submissions. Daniel Turkington is POC for the form.</description>
    <label>Contact Form Submission Links</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>