unpackaged/main/default/objects/Lead/fields/Converted_Owner__c.field-meta.xml
<CustomField>
    <fullName>Converted_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User to become the owner when this lead is converted into a Contact. This will be the Account Owner unless there is no recommended account, in which case this will be a Round Robined BDR user.</description>
    <label>Converted Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LeadConvertedOwner</relationshipName>
    <type>Lookup</type>
</CustomField>