unpackaged/main/default/objects/Lead/fields/Covid_Need__c.field-meta.xml
<CustomField>
    <fullName>Covid_Need__c</fullName>
    <description>This field is used to provide a description for any special Covid Needs a customer may have.</description>
    <inlineHelpText>COVID19 Related manufacturing need form</inlineHelpText>
    <label>Covid Need</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>