unpackaged/main/default/objects/Lead/fields/Created_in_Salesforce_Int_Flag__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Salesforce_Int_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag for Syncing Leads Contacts to Salesforce</description>
    <label>Created in Salesforce Int Flag</label>
    <type>Checkbox</type>
</CustomField>