unpackaged/main/default/objects/Lead/fields/Current_Status_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Start_Date__c</fullName>
    <label>Current Status Start Date</label>
    <type>Date</type>
</CustomField>