unpackaged/main/default/objects/Lead/fields/Date_Created_in_Thomas_Ecosystem__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_in_Thomas_Ecosystem__c</fullName>
    <label>Date Created in Thomas Ecosystem</label>
    <type>Date</type>
</CustomField>