unpackaged/main/default/objects/Lead/fields/Date_of_Last_2D_Quote__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_2D_Quote__c</fullName>
    <label>[dnu] Date of Last 2D Quote</label>
    <type>Date</type>
</CustomField>