unpackaged/main/default/objects/Lead/fields/Date_of_Last_Quote__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Quote__c</fullName>
    <label>Date of Last Quote</label>
    <type>Date</type>
</CustomField>