unpackaged/main/default/objects/Lead/fields/Date_of_Last_Sourcing_Activity_Xom_Rel__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Sourcing_Activity_Xom_Rel__c</fullName>
    <label>Date of Last Sourcing Activity Xom Rel</label>
    <type>Date</type>
</CustomField>