unpackaged/main/default/objects/Lead/fields/Date_of_Last_Thomas_Search__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Thomas_Search__c</fullName>
    <label>Date of Last Thomas Search(Xom Category)</label>
    <type>Date</type>
</CustomField>