unpackaged/main/default/objects/Lead/fields/Days_in_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Status__c</fullName>
    <formula>Today()-Current_Status_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>