unpackaged/main/default/objects/Lead/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Used to mark the division a contact or lead is associated within the company(Account)</description>
    <label>Division</label>
    <type>TextArea</type>
</CustomField>