unpackaged/main/default/objects/Lead/fields/Domain_Match_Flag__c.field-meta.xml
<CustomField>
    <fullName>Domain_Match_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Lead at time of Creation Matched an Existing Account or Leads Domain</description>
    <label>Domain Match Flag</label>
    <type>Checkbox</type>
</CustomField>