unpackaged/main/default/objects/Lead/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <externalId>true</externalId>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>