unpackaged/main/default/objects/Lead/fields/Employees_Range__c.field-meta.xml
<CustomField>
    <fullName>Employees_Range__c</fullName>
    <description>Bucketed employee ranges for company (useful for segmentation)</description>
    <inlineHelpText>Bucketed employee ranges for company (useful for segmentation)</inlineHelpText>
    <label>Employees Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employee_Ranges</valueSetName>
    </valueSet>
</CustomField>