unpackaged/main/default/objects/Lead/fields/ERP_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Phone__c</fullName>
    <description>Phone from the ERP User.</description>
    <label>ERP Contact Phone</label>
    <type>Phone</type>
</CustomField>