unpackaged/main/default/objects/Lead/fields/ERP_Contact_Quotes_Orders__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Quotes_Orders__c</fullName>
    <formula>IF( NOT(ISBLANK(Xometry_ERP_Contact_ID__c)) , HYPERLINK("https://erp.xometry.com/quotes-orders?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=4&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D="+ Xometry_ERP_Contact_ID__c +"&amp;n_columns=19","Go to this Contact in the ERP", "_blank"), "No ERP Contact information Provided")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Contact Quotes/Orders</label>
    <type>Text</type>
</CustomField>