unpackaged/main/default/objects/Lead/fields/ERP_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>ERP_Shipping_Country__c</fullName>
    <label>ERP Shipping Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>