unpackaged/main/default/objects/Lead/fields/Estimated_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Revenue__c</fullName>
    <label>Estimated Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estimated_Annual_Revenue</valueSetName>
    </valueSet>
</CustomField>