unpackaged/main/default/objects/Lead/fields/Ext__c.field-meta.xml
<CustomField>
    <fullName>Ext__c</fullName>
    <label>Ext.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>