unpackaged/main/default/objects/Lead/fields/First_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Quote_Date__c</fullName>
    <label>Date of First Quote</label>
    <type>Date</type>
</CustomField>