unpackaged/main/default/objects/Lead/fields/First_SDR_Activity__c.field-meta.xml
<CustomField>
    <fullName>First_SDR_Activity__c</fullName>
    <description>The first SDR activity where the Distinct Call Type exists (e.g. 8x8 IN, 8x8 OB, CAS OB).</description>
    <inlineHelpText>The first SDR activity.</inlineHelpText>
    <label>First SDR Activity</label>
    <type>DateTime</type>
</CustomField>