unpackaged/main/default/objects/Lead/fields/FirstFusionEstimate__c.field-meta.xml
<CustomField>
    <fullName>FirstFusionEstimate__c</fullName>
    <label>First Fusion Estimate</label>
    <type>DateTime</type>
</CustomField>