unpackaged/main/default/objects/Lead/fields/Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End__c</fullName>
    <label>Fiscal Year End</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>