unpackaged/main/default/objects/Lead/fields/Generated_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>Generated_by_Sales__c</fullName>
    <formula>IF(
 HS_Generated_by_Sales__c = "True" ||
 (
  ISPICKVAL(LeadSource, "Outreach") ||
  ISPICKVAL(LeadSource, "ZoomInfo") ||
  ISPICKVAL(LeadSource, "Webinar") ||
  ISPICKVAL(LeadSource, "Sales Generated")
 ) ||
 (
  CreatedBy.UserRole.Name = "TSE" ||
  CreatedBy.UserRole.Name = "AE-I" ||
  CreatedBy.UserRole.Name = "AE-II" ||
  CreatedBy.UserRole.Name = "AE-III" ||
  CreatedBy.UserRole.Name = "BDR" ||
  CreatedBy.UserRole.Name = "CSAM" ||
  CreatedBy.UserRole.Name = "EAM" ||
  CreatedBy.UserRole.Name = "CSS" ||
  CreatedBy.UserRole.Name = "EBDR" ||
  CreatedBy.UserRole.Name = "EGR" ||
  CreatedBy.UserRole.Name = "IMS" ||
  CreatedBy.UserRole.Name = "SAE" ||
  CreatedBy.UserRole.Name = "SAM" ||
  CreatedBy.UserRole.Name = "SDR" ||
  CreatedBy.UserRole.Name = "VMS"
 ) ||
 (
  Ultimate_Created_By_Role__c = "TSE" ||
  Ultimate_Created_By_Role__c = "AE-I" ||
  Ultimate_Created_By_Role__c = "AE-II" ||
  Ultimate_Created_By_Role__c = "AE-III" ||
  Ultimate_Created_By_Role__c = "BDR" ||
  Ultimate_Created_By_Role__c = "CSAM" ||
  Ultimate_Created_By_Role__c = "EAM" ||
  Ultimate_Created_By_Role__c = "CSS" ||
  Ultimate_Created_By_Role__c = "EBDR" ||
  Ultimate_Created_By_Role__c = "EGR" ||
  Ultimate_Created_By_Role__c = "IMS" ||
  Ultimate_Created_By_Role__c = "SAE" ||
  Ultimate_Created_By_Role__c = "SAM" ||
  Ultimate_Created_By_Role__c = "SDR" ||
  Ultimate_Created_By_Role__c = "VMS"
 ),
 "TRUE","FALSE"
)</formula>
    <inlineHelpText>Formula that looks at HS info, Lead Source, Created By and Ultimate Created By to determine if this was generated by Sales</inlineHelpText>
    <label>Generated by Sales</label>
    <type>Text</type>
</CustomField>