unpackaged/main/default/objects/Lead/fields/Generic_BDR_RR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>Generic_BDR_RR_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic_BDR_RR_FLAG</label>
    <type>Checkbox</type>
</CustomField>