unpackaged/main/default/objects/Lead/fields/Generic_FLAG__c.field-meta.xml
<CustomField>
    <fullName>Generic_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if Lead Contacts domain is generic.</description>
    <label>Generic?</label>
    <type>Checkbox</type>
</CustomField>