unpackaged/main/default/objects/Lead/fields/Get_Quote_Url__c.field-meta.xml
<CustomField>
    <fullName>Get_Quote_Url__c</fullName>
    <formula>IF( NOT(ISBLANK(Last_Quote_Xometry_ERP_ID__c)), HYPERLINK("https://get.xometry.com/quote/"+ Last_Quote_Xometry_ERP_ID__c ,"Go to this Quote in the Get Site", "_blank"), "No Quote at this time")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Quote Url</label>
    <type>Text</type>
</CustomField>