unpackaged/main/default/objects/Lead/fields/has_quoted_Die_Casting__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_Die_Casting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_quoted_Die_Casting</label>
    <type>Checkbox</type>
</CustomField>