unpackaged/main/default/objects/Lead/fields/Has_Quoted_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Has_Quoted_Rpt__c</fullName>
    <formula>ISBLANK(Last_Quote_Xometry_ERP_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has_Quoted_Rpt</label>
    <type>Checkbox</type>
</CustomField>