unpackaged/main/default/objects/Lead/fields/has_quoted_SLS__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_SLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_quoted_SLS</label>
    <type>Checkbox</type>
</CustomField>