unpackaged/main/default/objects/Lead/fields/HS_Applications__c.field-meta.xml
<CustomField>
    <fullName>HS_Applications__c</fullName>
    <description>Captures data from Hubspots' User Profile Form for this field. Not editable in Salesforce. Source of truth is Hubspot.</description>
    <label>HS Applications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User research</fullName>
            </value>
            <value>
                <fullName>Product design</fullName>
            </value>
            <value>
                <fullName>Design prototype</fullName>
            </value>
            <value>
                <fullName>Engineering prototype</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Tooling (production line)</fullName>
            </value>
            <value>
                <fullName>Final production runs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>