unpackaged/main/default/objects/Lead/fields/HS_Design_Guide_Processes__c.field-meta.xml
<CustomField>
    <fullName>HS_Design_Guide_Processes__c</fullName>
    <description>Hubspot Integration Value Set</description>
    <inlineHelpText>This pick list comes from Hubspot</inlineHelpText>
    <label>HS_Design_Guide_Processes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HS_Design_Guide_Processes</valueSetName>
    </valueSet>
</CustomField>