unpackaged/main/default/objects/Lead/fields/HS_Generated_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>HS_Generated_by_Sales__c</fullName>
    <label>HS Generated by Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>