unpackaged/main/default/objects/Lead/fields/HS_Legacy_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>HS_Legacy_Create_Date__c</fullName>
    <label>HS Legacy Create Date</label>
    <type>DateTime</type>
</CustomField>