unpackaged/main/default/objects/Lead/fields/HS_Original_source_drill_down_1__c.field-meta.xml
<CustomField>
    <fullName>HS_Original_source_drill_down_1__c</fullName>
    <label>Lead Source Drill Down 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>