unpackaged/main/default/objects/Lead/fields/HS_Original_source_drill_down_2__c.field-meta.xml
<CustomField>
    <fullName>HS_Original_source_drill_down_2__c</fullName>
    <label>HS Original Source Drill-Down 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>