unpackaged/main/default/objects/Lead/fields/HS_Preferred_Manufacturing_Providers__c.field-meta.xml
<CustomField>
    <fullName>HS_Preferred_Manufacturing_Providers__c</fullName>
    <description>Captures data from Hubspots' User Profile Form for this field. Not editable in Salesforce. Source of truth is Hubspot.</description>
    <label>HS Preferred Manufacturing Providers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My company's internal machines</fullName>
            </value>
            <value>
                <fullName>A local machine shop or 3D printing service provider</fullName>
            </value>
            <value>
                <fullName>Xometry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overseas manufacturers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>