unpackaged/main/default/objects/Lead/fields/hubspot_companyid_mvp_load__c.field-meta.xml
<CustomField>
    <fullName>hubspot_companyid_mvp_load__c</fullName>
    <externalId>true</externalId>
    <label>hubspot_companyid_mvp_load</label>
    <length>20</length>
    <type>Text</type>
</CustomField>