unpackaged/main/default/objects/Lead/fields/Hubspot_contactid_mvp_load__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_contactid_mvp_load__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot_contactid_mvp_load</label>
    <length>20</length>
    <type>Text</type>
</CustomField>