unpackaged/main/default/objects/Lead/fields/HubSpot_User_Form_Show_Hide__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_User_Form_Show_Hide__c</fullName>
    <description>Used to check the fields coming from the HubSpot User Profile Form for null values. If all fields are null the Action will not show on the Lightning Page.</description>
    <formula>AND(
ISBLANK(HS_Applications__c),
ISBLANK(HS_Manufacturing_Processes_Utilized__c),
ISBLANK(HS_Manufacturing_Process_Interest__c),
ISBLANK(HS_Preferred_Manufacturing_Providers__c),
ISBLANK(HS_Preferred_Online_Provider__c),
ISBLANK(TEXT(HS_Purchase_Authority__c)),
ISBLANK(HS_Spending_Limit__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HubSpot User Form Show/Hide</label>
    <type>Checkbox</type>
</CustomField>