unpackaged/main/default/objects/Lead/fields/HubspotDUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>HubspotDUNSNumber__c</fullName>
    <description>DUNS number from Hubspot</description>
    <label>Hubspot DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>