unpackaged/main/default/objects/Lead/fields/HubspotParentDUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>HubspotParentDUNSNumber__c</fullName>
    <description>Parent DUNS Number from Hubspot</description>
    <label>Hubspot Parent DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>