unpackaged/main/default/objects/Lead/fields/HubspotUltimateDUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>HubspotUltimateDUNSNumber__c</fullName>
    <description>Ultimate DUNS Number from Hubspot</description>
    <label>Hubspot Ultimate DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>