unpackaged/main/default/objects/Lead/fields/IntercomUserIdonLead__c.field-meta.xml
<CustomField>
    <fullName>IntercomUserIdonLead__c</fullName>
    <label>IntercomUserIdonLead</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>