unpackaged/main/default/objects/Lead/fields/IsVisitorSearchingThomas__c.field-meta.xml
<CustomField>
    <fullName>IsVisitorSearchingThomas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsVisitorSearchingThomas</label>
    <type>Checkbox</type>
</CustomField>