unpackaged/main/default/objects/Lead/fields/Last30FusionLastProcess__c.field-meta.xml
<CustomField>
    <fullName>Last30FusionLastProcess__c</fullName>
    <label>Last 30 Fusion Last Process</label>
    <type>TextArea</type>
</CustomField>