unpackaged/main/default/objects/Lead/fields/Last30FusionMaterials__c.field-meta.xml
<CustomField>
    <fullName>Last30FusionMaterials__c</fullName>
    <label>Last 30 Fusion Materials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>