unpackaged/main/default/objects/Lead/fields/Last_Lead_Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Owner_Change_Date__c</fullName>
    <inlineHelpText>Date in which the Lead Owner was changed last.</inlineHelpText>
    <label>Last Lead Owner Change Date</label>
    <type>DateTime</type>
</CustomField>