unpackaged/main/default/objects/Lead/fields/Last_Page_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Page_Visit_Date__c</fullName>
    <description>The Last Date that the Lead visited the main Xometry Site</description>
    <inlineHelpText>Last time Lead visited Xometry.com</inlineHelpText>
    <label>Last Page Visit Date</label>
    <type>Date</type>
</CustomField>