unpackaged/main/default/objects/Lead/fields/Last_Quote_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Quote_Time__c</fullName>
    <label>Quote Time</label>
    <type>DateTime</type>
</CustomField>